--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <!-- Masthead -->
   <header class="masthead text-white text-center">
-    <div class="overlay"></div>
+   <!--<div class="overlay"></div>--> 
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
