--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
       <a class="navbar-brand" href="#">School of AI</a>
-      <a class="btn btn-primary" href="https://medium.com/the-school-of-ai-official">Our Blog</a>
+      <a class="btn btn-primary" href="http://bit.ly/2r3165o">Our Join our Slack!</a>
+      <a class="btn btn-primary" href="https://www.theschool.ai/deans-map/">Local Chapters</a>
+      <a class="btn btn-primary" href="https://medium.com/the-school-of-ai-official">Blog</a>
+      <a class="btn btn-primary" href="https://twitter.com/schoolofaioffic">Twitter</a>
+      <a class="btn btn-primary" href="https://www.instagram.com/school_of_ai/">Instagram</a>
+      <a class="btn btn-primary" href="https://www.youtube.com/channel/UCQ8OQiZVV5ZRGdiBe3LmITw">YouTube</a>
     </div>
   </nav>
 
