--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <a class="navbar-brand" href="#">School of AI</a>
       <a class="btn btn-primary" href="http://bit.ly/2PblklZ">Join our Slack!</a>
       <a class="btn btn-primary" href="https://github.com/noveoko/soai/blob/master/stuff/global_chapters.md">Local Chapters</a>
-      <a class="btn btn-primary" href="https://github.com/noveoko/soai/blob/master/README.md">Write Code</a>
+      <a class="btn btn-primary" href="https://github.com/noveoko/soai">Improve SOAI</a>
       <a class="btn btn-primary" href="https://twitter.com/schoolofaioffic">Twitter</a>
       <a class="btn btn-primary" href="https://www.instagram.com/school_of_ai/">Instagram</a>
       <a class="btn btn-primary" href="https://www.youtube.com/channel/UCQ8OQiZVV5ZRGdiBe3LmITw">YouTube</a>
