--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <a class="btn btn-success" href="https://twitter.com/schoolofaioffic">Twitter</a>
       <a class="btn btn-success" href="https://www.instagram.com/school_of_ai/">Instagram</a>
       <a class="btn btn-success" href="https://www.youtube.com/channel/UCQ8OQiZVV5ZRGdiBe3LmITw">YouTube</a>
+      <a class="btn btn-success" href="https://www.linkedin.com/company/18747123">LinkedIn</a>
     </div>
   </nav>
 
