--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <a class="btn btn-primary" href="https://github.com/noveoko/soai/blob/master/stuff/global_chapters.md">Local Chapters</a>
       <a class="btn btn-danger" href="https://github.com/noveoko/soai">Improve SOAI</a>
       <a class="btn btn-success" href="https://twitter.com/soaiworld">Twitter</a>
-      <a class="btn btn-success" href="https://www.instagram.com/school_of_ai/">Instagram</a>
+      <a class="btn btn-success" href="https://www.instagram.com/soaiworld/">Instagram</a>
       <a class="btn btn-success" href="https://www.youtube.com/channel/UCQ8OQiZVV5ZRGdiBe3LmITw">YouTube</a>
       <a class="btn btn-success" href="https://www.linkedin.com/company/18747123">LinkedIn</a>
     </div>
