--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="author" content="Marcin Kraszewski">
 
-  <title>School of AI: Learn & Teach Machine Learning anywhere on Earth for free.</title>
+  <title>SOAI:Learn, Build, Teach</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-      <a class="navbar-brand" href="#">School of AI</a>
+      <a class="navbar-brand" href="#">SOAI</a>
       <a class="btn btn-primary" href="http://bit.ly/2PblklZ">Join our Slack!</a>
       <a class="btn btn-primary" href="https://github.com/noveoko/soai/blob/master/stuff/global_chapters.md">Local Chapters</a>
       <a class="btn btn-danger" href="https://github.com/noveoko/soai">Improve SOAI</a>
