fixed link error due to HTML div in wrong place

--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
 
     <!-- ======= More Services Section ======= -->
 
-        </div>
+       
 
-      </div>
+  
 
     <section id="apps" class="portfolio">
       <div class="container">
@@ -288,8 +288,8 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="400">
           <div class="btn-group" role="group" aria-label="Basic example">
-<button type="button" class="btn btn-outline-primary" @click="openURL('https://noveoko.github.io/automationwizard/')">Automation Decision Wizard 🐞</button>
-<button type="button" class="btn btn-outline-primary" @click="openURL('')" disabled>Random All the Things 😺</button>
+<button @click="vm.openURL('https://noveoko.github.io/automationwizard/')" type="button" class="btn btn-outline-primary" >Automation Decision Wizard 🐞</button>
+<button type="button" class="btn btn-outline-primary" @click="vm.openURL('')" disabled>Random All the Things 😺</button>
 </div>
         </div>
 
