--- a/index.html
+++ b/index.html
@@ -404,11 +404,15 @@
                     <img src="podcast/art/0001_Dan_Berte.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Dan Berte</h5>
+
                       <p class="card-text">A conversation with my friend from Wisconsin on his recent career change, getting into Ethereum mining, his experience getting Covid-19 3 times, and more!</p>
                       <h6>Topics</h6>
                       <span>Ethereum, Printing Presses, Automation</span></br>
                       Status: <em>Post-production</em>
-                      <!--<a href="#" class="btn btn-primary">Play</a>-->
+                      <audio controls="">
+                        <source src="podcast/episodes/episode_1_Dan_Berte/1_dan_berte.mp3" type="audio/mp3">
+                        Your browser cannot play this audio -- just download it.
+                      </audio>
                     </div>
                   </div>
             </div>
