fixed podcast info

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Dan Berte</h5>
 
-                      <p class="card-text">A conversation with my friend from Wisconsin on his recent career change, getting into Ethereum mining, his experience getting Covid-19 3 times, and more!</p>
+                      <p class="card-text">A conversation with my friend from Wisconsin on his recent career change, getting into Ethereum mining, his experience getting Covid-19 twice, and more!</p>
                       <h6>Topics</h6>
                       <span>Ethereum, Printing Presses, Automation</span></br>
                       Status: <em>Post-production</em>
