added Google Analytics

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MR0JNHS3RE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MR0JNHS3RE');
+</script>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
 
   <meta charset="utf-8">
@@ -413,6 +422,7 @@
                         <source src="podcast/episodes/episode_1_Dan_Berte/1_dan_berte.mp3" type="audio/mp3">
                         Your browser cannot play this audio -- just download it.
                       </audio>
+                      *May contain adult language
                     </div>
                   </div>
             </div>
