--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@
            <h4>Videos 🎬</h4>
            <ul>
            <li><a href="https://www.youtube.com/watch?v=-qizU_v-oqA">GPT-3 Part 1:</a>Build 2 projects using GPT-3 in just a couple of minutes. Bare bones: branding generator, chat bot.</li>
-           <li><a href="https://www.youtube.com/watch?v=zgRc2wTiug8">GPT-3 Part 2:</a>Using my voice to chat with OpenAI's GPT-3 model</li>    
+           <li><a href="https://www.youtube.com/watch?v=zgRc2wTiug8">GPT-3 Part 2:</a>Using my voice to chat with OpenAI's GPT-3 model</li>
+           <li><a href="https://www.youtube.com/watch?v=xKCPyLC4knM">WarsawJS: Take Action to Protect your Attention and Focus</li>
           </ul>
           </div>
             </div>
