--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="contact-about">
               <h3>SOAI</h3>
-              <p>We want to invite you to discuss and exchange ideas about the future and the role of AI in it with us. We are building a community of people who are expanding the global awareness of the importance of AI for our society. If you  join you will be able to use the knowledge and experience of others in your own endeavours, and you will be able to share your own insights and experience.  organising events and other activities.</p>
+              <p>We would like to invite you to engage in a discussion and exchange of ideas about the future and the role of AI in it with our community. Our community is dedicated to increasing global awareness of the significance of AI for society. By joining, you will have the opportunity to draw on the knowledge and experience of others in your own pursuits, as well as contribute your own insights and experiences through events and other activities.</p>
               <div class="social-links">
                 <a :href="this.links.twitter" target="_blank" class="twitter"><i class="icofont-twitter"></i></a>
                 <a :href="this.links.facebook" target="_blank" class="facebook"><i class="icofont-facebook"></i></a>
