--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Dan Berte</h5>
 
-                      <p class="card-text">A conversation with my friend from Wisconsin on his recent career change, getting into Ethereum mining, his experience getting Covid-19 twice, and more!</p>
+                      <p class="card-text">In this episode, I chat with my friend from Wisconsin about his recent career change and his foray into Ethereum mining. We also discuss his experience contracting Covid-19 twice and more. Tune in to hear about Ethereum, printing presses, automation, and more!</p>
                       <h6>Topics</h6>
                       <span>Ethereum, Printing Presses, Automation</span></br>
                       Status: <em>Post-production</em>
