--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
         <div class="row content">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="150">
            
-            <p>What started out as an experiment, has now become a serious online community dedicated to the promotion of Artificial Intelligence and its benefits to society. Our <a href="https://www.linkedin.com/company/18747123/">Linkedin group</a> includes 34,000+ members around the world.
-            </p>
+            <p>What started out as an experiment has now evolved into a dedicated online community focused on promoting the benefits of Artificial Intelligence (AI) to society. Our LinkedIn group boasts over 34,000 members from around the globe.
+
+Join our community and share your AI knowledge and experiences on our Slack channel. Sign up for our newsletter to stay up-to-date on the latest AI news and events. No matter where you are or what your background is, our community offers a wealth of resources and opportunities to learn and apply AI technology in your personal and professional life. Join us and become a part of the AI revolution.</p>
             <ul>
               <li><i class="ri-check-double-line"></i> Subscribe to our newsletter</li>
               <li><i class="ri-check-double-line"></i> Share your experience and knowledge about Artificial Intelligence by joining our <a href="https://soaiworld.slack.com/join/shared_invite/enQtODQxODUxNzIxNDEwLTBmMjdkMjMxNTFkYjE5ZWExMDlhZjU2ZmM4YTE0ZmM3N2YzOGMzNmE1NTAzZWRmZTk1YTdhYWUwZTIzODVmNjk#/">Slack</a>.</li>
