--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="row">
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1 data-aos="fade-up">AI for People 🌱🧍</h1>
-          <h2 data-aos="fade-up" data-aos-delay="400">Our mission is to promote the understanding of Artificial Intelligence and its applications in order to raise the quality of life for everyone on Earth.</h2>
+          <h2 data-aos="fade-up" data-aos-delay="400">Elevate quality of life through AI understanding</h2>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left" data-aos-delay="200">
           <img src="assets/img/hero-img.png" class="img-fluid animated" alt="">
